--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=APIServer
+
+# API ?? ?? ??
+server.port=8083
+
+# JWT ??
+jwt.secret=sf123451234512345123451234512345
+jwt.expiration=7200000
