--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,25 @@
 spring.application.name=APIServer
 
-# API ?? ?? ??
+# API port number
 server.port=8083
 
-# JWT ??
+
+# Datasource Settings
+# createDatabaseIfNotExist=true ?? ??
+spring.datasource.url=jdbc:mysql://localhost:3309/api_db
+spring.datasource.username=root
+spring.datasource.password=1234
+
+# JPA & Hibernate Settings
+# update? ?? ????? ??
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=false
+
+# JWT ?? (?? ?? ??)
+# ?? ?? ? (32 ?? ?)
 jwt.secret=sf123451234512345123451234512345
+# ????(2??)
 jwt.expiration=7200000
