mes대시보드 연결

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ spring.jpa.open-in-view=false
 jwt.secret=sf123451234512345123451234512345
 # ????(2??)
 jwt.expiration=7200000
+
+# ? ERP ?? ?? (??)
+erp.api.url=http://localhost:8081/api/projects
+erp.api.token=Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
